--- a/.github/workflows/full.yml
+++ b/.github/workflows/full.yml
@@ -20,6 +20,8 @@ on:
   push:
     branches:
     - main
+  workflow_dispatch:
+
 env:
   BuildConfiguration: Release
   BuildParameters_RestoreBuildProjects: "./src/src.sln"
